// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Life: should be able to change theme 1`] = `
.c0 {
  background: #66bd38;
  border: 1px solid;
  height: 3em;
  -webkit-transition: 200ms;
  transition: 200ms;
  width: 50%;
}

<div
  className="c0"
/>
`;

exports[`components/Life: should be able to change theme 2`] = `
.c0 {
  background: #ff3859;
  border: 1px solid;
  height: 3em;
  -webkit-transition: 200ms;
  transition: 200ms;
  width: 50%;
}

<div
  className="c0"
/>
`;
